<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Default -->
    <string name="app_name">PanDroid</string>
    <string name="menu_settings">Paramètres</string>
    
    <!-- Login Activity -->
    <string name="login_identifiant">Identifiant</string>
    <string name="login_mdp">Mot de passe</string>
    <string name="checkbox_text">Se rappeler de moi ?</string>
    <string name="desc_connexion">Connexion</string>
    
     <!-- Menu Activity -->
    <string name="desc_voir">Voir les messages</string>
    <string name="desc_envoyer">Envoyer un message</string>
    
    <!-- Voir Activity -->
    <string name="photo_description">Photo de l\'expéditeur</string>
     <string name="desc_rafraichir">Rafraichir</string>
    
    <!-- Ecrire Activity -->
    <string name="ecrire_default_message">Votre message ici !</string>
    
    <!-- En cas de problème d'affichage des images -->
    <string name="desc_image">Problème affichage image</string>
    
    <!-- Générique -->
    <string name="desc_envoi">Envoyer</string>
    <string name="desc_effacer">Effacer</string>

    <!-- Couleur -->
    <color name="color_error">#880000</color>
    <color name="color_valid">#006600</color>
    <color name="black">#000000</color>
	<color name="white">#FFFFFF</color>

</resources>