<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/imageView_login_tete_panda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/tete_panda"
        android:contentDescription="@string/desc_image"/>

    <EditText
        android:id="@+id/editText_login_identifiant"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_custom"
        android:ems="10"
        android:hint="@string/login_identifiant"
        android:paddingLeft="20dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText_login_mdp"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_custom"
        android:height="40dp"
        android:hint="@string/login_mdp"
        android:inputType="textWebPassword"
        android:paddingLeft="20dp"
        android:paddingTop="1dp" >
    </EditText>

    <CheckBox
        android:id="@+id/checkBox_login_rappel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/checkbox_text" />

    <TextView
        android:id="@+id/textView_login_infos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_error" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_gravity="center" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="50dp">

            <ImageButton
                android:id="@+id/imageButton_login_connexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/selec_connexion"
                android:contentDescription="@string/desc_connexion" />

            <ImageButton
                android:id="@+id/imageButton_login_annuler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selec_effacer"
                android:contentDescription="@string/desc_effacer"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/progressBar_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>