<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/editText_ecrire_auteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_ecrire_message"
        android:layout_width="270dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/edit_text_custom"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/ecrire_default_message"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_ecrire_informations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imageButton_ecrire_envoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/selec_envoyer"
                android:contentDescription="@string/desc_envoi" />

            <ImageButton
                android:id="@+id/imageButton_ecrire_effacer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/selec_effacer"
                android:contentDescription="@string/desc_effacer" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
